REST API: Added request for list checking
New request for checking if any given user has a specific book in one of their lists
